--- a/personalizado/pubspec.yaml
+++ b/personalizado/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.2.2
   pull_to_refresh: ^2.0.0
   flutter_svg: ^2.0.9
+  palette_generator: ^0.3.3+3
+  flutter_share: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
